--- a/_pages/404.md
+++ b/_pages/404.md
@@ -3,6 +3,7 @@ title: "Page Not Found"
 excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
+excerpt_separator: "\n\n" # Add this line
 ---
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
